--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -257,12 +257,18 @@ jobs:
   build-deploy:
     runs-on: self-hosted
     env:
-      FRONTEND_IMAGE: "moawiz/travel-frontend:${{ github.sha }}"
-      BACKEND_IMAGE: "moawiz/travel-backend:${{ github.sha }}"
+      FRONTEND_IMAGE: "moawiz/travel-frontend:latest"
+      BACKEND_IMAGE: "moawiz/travel-backend:latest"
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Set Docker to Default Context
+        shell: powershell
+        run: |
+          docker context use default
+          docker info
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -273,7 +279,7 @@ jobs:
       - name: Build and Push Frontend
         uses: docker/build-push-action@v5
         with:
-          context: ./travel-to-pakistan/frontend
+          context: ./frontend
           push: true
           tags: ${{ env.FRONTEND_IMAGE }}
           cache-from: type=gha
@@ -284,7 +290,7 @@ jobs:
       - name: Build and Push Backend
         uses: docker/build-push-action@v5
         with:
-          context: ./travel-to-pakistan/backend
+          context: ./backend
           push: true
           tags: ${{ env.BACKEND_IMAGE }}
           cache-from: type=gha
@@ -296,16 +302,16 @@ jobs:
         shell: powershell
         run: |
           # Create namespace
-          kubectl create namespace travel-app --dry-run=client -o yaml | kubectl apply -f -
+          kubectl create namespace travel-app-namespace --dry-run=client -o yaml | kubectl apply -f -
 
           # Deploy MongoDB
-          kubectl apply -f ./travel-to-pakistan/mongodb/ -n travel-app
-          kubectl wait --for=condition=ready pod -l app=mongodb -n travel-app --timeout=300s
+          kubectl apply -f ./mongodb/ -n travel-app-namespace
+          kubectl wait --for=condition=ready pod -l app=mongodb -n travel-app-namespace --timeout=300s
 
           # Deploy backend and frontend
-          kubectl apply -f ./travel-to-pakistan/backend/ -n travel-app
-          kubectl apply -f ./travel-to-pakistan/frontend/ -n travel-app
+          kubectl apply -f ./backend/ -n travel-app-namespace
+          kubectl apply -f ./frontend/ -n travel-app-namespace
 
           # Expose services
-          kubectl expose deployment frontend -n travel-app --type=NodePort --port=80
-          kubectl expose deployment backend -n travel-app --type=NodePort --port=3000
+          kubectl expose deployment frontend-deployment -n travel-app-namespace --type=NodePort --port=80 --name=frontend
+          kubectl expose deployment backend-deployment -n travel-app-namespace --type=NodePort --port=3000 --name=backend
