--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -264,11 +264,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set Docker to Default Context
+      - name: Reset Docker Environment
         shell: powershell
         run: |
           docker context use default
-          docker info
+          Remove-Item Env:DOCKER_HOST -ErrorAction SilentlyContinue
+          Remove-Item Env:DOCKER_TLS_VERIFY -ErrorAction SilentlyContinue
+          Remove-Item Env:DOCKER_CERT_PATH -ErrorAction SilentlyContinue
+          docker info --format '{{.ServerVersion}}'
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
